# scummvm-gtk

./: README.md  messages.mo  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
data/: se.danielnylander.scummvm-gtk.desktop
po/: scummvm-gtk.pot  sv.po
po/locale/sv/LC_MESSAGES/: scummvm-gtk.mo
src/scummvm_gtk/: __init__.py  __main__.py  games.py  main.py
