[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scummvm-gtk"
version = "0.2.3"
description = "GTK4/Adwaita frontend for ScummVM"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
requires-python = ">=3.10"
dependencies = ["PyGObject>=3.42"]

[project.gui-scripts]
scummvm-gtk = "scummvm_gtk.main:main"

[project.scripts]
scummvm-gtk = "scummvm_gtk.main:main"
